Final Changes - Awaiting Test